# CSPToolbox

./: .gitignore  README.md  pyproject.toml  requirements.txt
Source/: __init__.py  crystal_structure.py  csofm_input.py  csorm_input.py  gaussian_input.py  mie_typing.py  pdd_descriptor.py  vasp_file_manifest.py  vasp_input.py  vasp_results.py
Source/CLI_scripts/: __init__.py  analyze_rerun_vasp_results.py  compare_csorm_res_parsing.py  compare_pdd.py  generate_csofm_from_contcar.py  generate_csorm_db_pcm11_from_latest_contcar.py  generate_csorm_from_latest_contcar.py  generate_gas_phase_vasp_inputs.py  generate_gaussian_inputs.py  generate_pbe0_vasp_inputs_from_latest_contcar.py  generate_vasp_inputs_from_cif_priority.py  plot_csorm_e_inter_vs_u_inter.py  plot_u_inter_mie_vs_u_inter_vasp.py  plot_u_tot_bp_and_db14_pcm11_vs_u_inter.py  plot_u_tot_bp_vs_u_inter.py  plot_u_tot_db14_pcm11_vs_u_inter.py  plot_u_tot_db14_pcm11_vs_u_latt.py  plot_u_tot_vs_u_inter.py  render_optimised_cif_molecule_images.py  render_unit_cell_images.py  summarize_optimised_cif_contcar_chain.py  summarize_vasp_results.py  vasp_file_manifest.py  write_expanded_cifs.py  zmatrix_viewer.py
Source/zmatrix_viewer/: __init__.py  cli.py  geometry.py  html_export.py  model.py  parser.py
Task/: get_VASP_results_from_young.txt  pbe0_point_energy_workflow.md
Template/CSOFM_input/: CSO_FM.input  Zmatrix  bit_mp_mie_pcm11.inter  csofm_env.csv  mol_input_API.txt  mol_input_header.txt  runSingleCSOFM.csh  (+2 more)
csptoolbox/: __init__.py  crystal_structure.py  vasp_file_manifest.py  vasp_input.py  vasp_results.py
(+1726 files in other folders)
